welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: not found: value m
  m = s/nums.length
  ^averageValue:7: error: not found: value m
  return m.toInt
         ^