welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var s = 0
  for (i<-nums){
    s+=i
  }
  m = s/nums.length
  return m.toInt
}